<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tablet Hotels</string>
    <string name="current_location">Current location</string>
    <string name="no_connection">No network connection!</string>
    <string name="no_gps">GPS is OFF</string>
    <string name="turn_on">Turn ON</string>
    <string name="use_gps">\"To use current location, Turn GPS ON\"</string>
    <string name="old_version_used">You are using old version</string>
    <string name="update_now">Update now!</string>
    <string name="back">Back</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="speak_now">Speak Now</string>
    <string name="change_theme">Change theme</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="something_wrong">Something is wrong</string>
    <string name="speech_not_supported">Unsupported device</string>
    <string name="loading_location">Searching Location</string>
    <string name="error">Error</string>
    <string name="cant_find_location">we couldn\'t find your location please fill in your address</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="did_you_like">Enjoy Tablet Hotels?</string>
    <string name="please_rate_us">Please tell us your opinion</string>
    <string name="rate">Rate!</string>
    <string name="later">Later</string>
    <string name="no_thanks">No, thanks</string>
    <string name="language">Language</string>
    <string name="app_slogan">by MICHELIN</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="english">English</string>
    <string name="changeLanguage">Choose language</string>
    <string name="turn_on_location">Please turn on Location in settings</string>
    <string name="precise_location_needed">Can\'t get address without precise location</string>
    <string name="today">Today</string>
    <string name="ok">OK</string>
    <string name="i_have_read_and_accept_terms">I accept the terms and conditions</string>
    <string name="terms_and_condition_read_needed">Please read and accept the terms and conditions</string>
    <string name="please_turn_on_notifications">Please allow notifications</string>
    <string name="turn_on_always_location">turn on always on location</string>
    <string name="turn_on_notifications">turn on notifications</string>
    <string name="subscription">Subscribe and get more</string>
    <string name="subscription_price">Only 15$ each month</string>
    <string name="subscribe">subscribe</string>
    <string name="home">HOME</string>
    <string name="premium">TABLET PLUS</string>
    <string name="saved_hotels">SAVED</string>
    <string name="fill_origin">fill origin</string>
    <string name="fill_destination">fill destination</string>
    <string name="where_are_you">Where Are You?</string>
    <string name="what_do_you_need">Where To?</string>
    <string name="ask_tablet_hotels">SEARCH</string>
</resources>