<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/shareItem"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />
    <item
        android:id="@+id/rateItem"
        android:icon="@drawable/ic_rate"
        android:title="@string/rate" />
    <item
        android:id="@+id/changeLanguageItem"
        android:icon="@drawable/ic_language"
        android:title="@string/changeLanguage" />
    <item
        android:id="@+id/contactUsItem"
        android:icon="@drawable/ic_mail"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/termsItem"
        android:icon="@drawable/ic_terms"
        android:title="@string/terms_and_conditions" />
    <item
        android:id="@+id/privacyItem"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy_policy" />
    <item
        android:id="@+id/changeThemeItem"
        android:icon="@drawable/ic_theme"
        android:title="@string/change_theme" />
</menu>
