<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/taxiLottie"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/fieldsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/flow" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fieldsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/originInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/where_are_you"
            app:layout_constraintBottom_toTopOf="@+id/DestinationInputLayout"
            app:layout_constraintTop_toBottomOf="parent"
            tools:layout_editor_absoluteX="32dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/originAutoCompleteView"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownHeight="200dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete"
                android:paddingHorizontal="48dp"
                android:textSize="16dp"
                tools:ignore="LabelFor,SpUsage,SpeakableTextPresentCheck,TextContrastCheck,VisualLintTextFieldSize,TextSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btnMyLocation"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_top_for_icons_on_input_layout"
            android:background="@android:color/transparent"
            android:elevation="1dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="@+id/originInputLayout"
            app:layout_constraintTop_toTopOf="@id/originInputLayout"
            app:srcCompat="@drawable/ic_my_location"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <ProgressBar
            android:id="@+id/locationProgressBar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:elevation="1dp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/btnMyLocation"
            app:layout_constraintTop_toTopOf="@id/originInputLayout" />

        <ImageButton
            android:id="@+id/btnClearOrigin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_top_for_icons_on_input_layout"
            android:background="@android:color/transparent"
            android:elevation="1dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/originInputLayout"
            app:layout_constraintTop_toTopOf="@id/originInputLayout"
            app:srcCompat="@drawable/ic_clear"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btnMicOrigin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_top_for_icons_on_input_layout"
            android:background="@android:color/transparent"
            android:elevation="1dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@id/originInputLayout"
            app:layout_constraintTop_toTopOf="@id/originInputLayout"
            app:srcCompat="@drawable/ic_mic"
            tools:ignore="ContentDescription,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DestinationInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/what_do_you_need"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/originInputLayout"
            tools:ignore="SpUsage">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/destinationAutoCompleteView"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownHeight="200dp"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"
                android:textSize="16dp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck,VisualLintTextFieldSize,TextSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btnClearDestination"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_top_for_icons_on_input_layout"
            android:background="@android:color/transparent"
            android:elevation="1dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/DestinationInputLayout"
            app:layout_constraintTop_toTopOf="@id/DestinationInputLayout"
            app:srcCompat="@drawable/ic_clear"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btnMicDestination"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_top_for_icons_on_input_layout"
            android:background="@android:color/transparent"
            android:elevation="1dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@id/DestinationInputLayout"
            app:layout_constraintTop_toTopOf="@id/DestinationInputLayout"
            app:srcCompat="@drawable/ic_mic"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/searchProgressBar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:elevation="1dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldsLayout" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnSearch"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/ask_tablet_hotels"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fieldsLayout"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>


